# juju-spell

./: .gitignore  Makefile  README.md  output.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/workflows/: func.yaml  lint_unit.yaml  pr.yaml  sonar.yaml
docs/: architecture.md  configuration.md  logging.md  output.md  workflow.md
docs/commands/update-packages/: update-packages.md  update_packages-input.yaml  update_packages-retval.json
docs/testing/: functional.md
helpers/: generate-config.py
juju_spell/: __init__.py  __main__.py  async_handler.py  cmd.py  config.py  exceptions.py  filter.py  settings.py  utils.py
juju_spell/assignment/: runner.py
juju_spell/cli/: __init__.py  add_user.py  base.py  enable_user.py  exceptions.py  grant.py  ping.py  remove_user.py  show_controller.py  status.py  update_packages.py  utils.py  version.py
juju_spell/commands/: __init__.py  add_user.py  base.py  controller.py  enable_user.py  grant.py  ping.py  remove_user.py  show_controller.py  status.py  update_packages.py
juju_spell/connections/: __init__.py  conn_builder.py  manager.py  network.py
multijuju/: __init__.py  __main__.py  async_handler.py  cli.py  cmd.py  config.py  config_default.yaml  filter.py  main.py  settings.py  utils.py
multijuju/assignment/: __init__.py  runner.py
multijuju/cli/: __init__.py  actions.py  base.py  base_cli.py  exceptions.py  fill.py  juju_actions_cli.py  juju_status.py  juju_status_cli.py  ping.py  show_controller.py  status.py  utils.py  version.py  version_cli.py
multijuju/commands/: __init__.py  base.py  base_command.py  cmd.py  example-app.py  juju_status_command.py  ping.py  show_controller.py  status.py
multijuju/connections/: __init__.py  connect_manager.py  manager.py
multijuju/juju_commands/: constants.py  show_controller.py
scripts/: generate-config.py
snap/: snapcraft.yaml
tests/functional/: conftest.py  requirements.txt  setup_lxd.py  test_connection.py
tests/unit/: conftest.py  requirements.txt  test_cmd.py  test_config.py  test_connect_manager.py  test_filter.py
tests/unit/assignment/: test_runner.py
tests/unit/cli/: conftest.py  test_base.py  test_cli_add_user.py  test_cli_base.py  test_cli_enable_user.py  test_cli_grant.py  test_cli_remove_user.py  test_cli_update_packages.py  test_utils.py
tests/unit/commands/: conftest.py  test_add_user.py  test_base.py  test_cmd_base.py  test_enable_user.py  test_grant.py  test_ping.py  test_remove_user.py  test_show_controller.py  test_status.py  test_update_packages.py  test_utils.py
tests/unit/connections/: test_conn_builder.py  test_connect_manager.py  test_manager.py  test_network.py
