[metadata]
name = multijuju
# See setup.py version generator
url = https://launchpad.net/multijuju
description = Juju plugin to verify if it is safe to perform an operation on one or more units
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Canonical DevOps Centres
license = GPLv3
license_file = LICENSE
classifiers =
   Development Status :: 2 - Pre-Alpha
   Environment :: Plugins
   Intended Audience :: Developers
   Intended Audience :: System Administrators
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent
   Topic :: System :: Installation/Setup
   Topic :: Utilities
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    confuse
    asyncio
    juju == 2.9.11
    craft-cli == 1.2.0

[options.extras_require]
lint =
    flake8
    flake8-docstrings
    flake8-colors
    flake8-colors
    pyproject-flake8
    colorama
    pylint
    mypy
    black
    isort

unittests =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio

functests =


verify =
    twine

docs =
    sphinx
    m2r2
    sphinxcontrib.apidoc

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    multijuju = multijuju.cli:main

[aliases]
test = pytest
